Add encryption method using openssl
This relies on the openssl extension being available in PHP and is
currently hardcoded to only make use of RSA keys for ease of initial
implementation and to reduce the amount of code for initial review.
Later commits may wish to expand upon the list of allowable encryption
and signing algorithms.

The functionality of the file largely matches that of the GpgCrypt
class. The receipts are generated to be signed JWTs as there are plenty
of tools (both online and offline) capable of validating JWTs so that a
user can have some assurance they hold a valid vote. The public portion
of the signing key is not made available however, and would need to be
done externally.

Tests were added to ensure that the encryption roundtrips successfully
and that various "invalid" formations are correctly disregarded.

Bug: T209892
Change-Id: Iaab9f69bba835eab5d3f5a8585ae17b230169498

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -29,7 +29,12 @@
 	"securepoll-full-gpg-error": "Error executing GPG:\n\nCommand: $1\n\nError:\n<pre>$2</pre>",
 	"securepoll-gpg-config-error": "GPG keys are configured incorrectly.",
 	"securepoll-gpg-parse-error": "Error interpreting GPG output.",
+	"securepoll-secret-openssl-error": "Error executing a cryptography operation.\nUse $wgSecurePollShowErrorDetail=true; in LocalSettings.php to show more detail.",
+	"securepoll-full-openssl-error": "Error executing a cryptography operation:\n<pre>$1</pre>",
+	"securepoll-openssl-invalid-key": "One of the keys provided was invalid. An encryption key must be an RSA public key of at least 2048 bits and a decryption or signing key must be an RSA private key of at least 2048 bits.",
 	"securepoll-no-decryption-key": "No decryption key is configured.\nCannot decrypt.",
+	"securepoll-wrong-decryption-key": "The configured decryption key is incorrect.\nCannot decrypt.",
+	"securepoll-no-verification-key": "No verification key is configured.\nCannot validate voting records.",
 	"securepoll-invalid-record": "Invalid voting record.",
 	"securepoll-jump": "Go to the voting server",
 	"securepoll-ballot-type-archived": "This ballot type has been archived and can no longer be used for voting.",
@@ -137,6 +142,8 @@
 	"securepoll-tally-form-file-label": "Upload encrypted dump (optional)",
 	"securepoll-tally-upload-submit": "Create tally",
 	"securepoll-tally-gpg-decrypt-key": "GPG decryption key",
+	"securepoll-tally-openssl-decrypt-key": "Decryption key",
+	"securepoll-tally-openssl-verify-key": "Verification key",
 	"securepoll-tally-error": "Error interpreting vote record, cannot produce a tally.",
 	"securepoll-tally-job-enqueued": "This election is being (re-)tallied. Please check back later for the results.",
 	"securepoll-no-upload": "No file was uploaded, cannot tally results.",
@@ -182,6 +189,8 @@
 	"securepoll-create-label-comment-prompt": "Prompt text for comments:",
 	"securepoll-create-label-gpg_encrypt_key": "GPG encryption key",
 	"securepoll-create-label-gpg_sign_key": "GPG signing key",
+	"securepoll-create-label-openssl_encrypt_key": "Encryption key",
+	"securepoll-create-label-openssl_sign_key": "Signing key",
 	"securepoll-create-label-questions": "== Questions ==",
 	"securepoll-create-questions-row-legend": "Question",
 	"securepoll-create-label-questions-question": "Question text:",
@@ -211,6 +220,7 @@
 	"securepoll-create-option-election_type-stv+droop-quota": "Single transferable vote with Droop quota",
 	"securepoll-create-option-election_crypt-none": "No encryption",
 	"securepoll-create-option-election_crypt-gpg": "GPG",
+	"securepoll-create-option-election_crypt-openssl": "OpenSSL",
 	"securepoll-create-label-comment": "Reason",
 	"securepoll-create-user-not-in-electionadmin-group": "\"$1\" is not a {{GENDER:$1|member}} of the electionadmin group.",
 	"securepoll-create-fail-bad-id": "The submitted election ID does not match the election being edited",
