--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -54,8 +54,13 @@
 	"securepoll-full-gpg-error": "GPG stands for [[w:GNU_Privacy_Guard|GNU Privacy Guard]].\n\nParameters:\n* $1 - command line\n* $2 - error message",
 	"securepoll-gpg-config-error": "GPG stands for [[w:GNU_Privacy_Guard|GNU Privacy Guard]].",
 	"securepoll-gpg-parse-error": "GPG stands for [[w:GNU_Privacy_Guard|GNU Privacy Guard]].",
+	"securepoll-secret-openssl-error": "{{doc-important|Do not translate LocalSettings.php and <code><nowiki>$wgSecurePollShowErrorDetail=true;</nowiki></code>}}",
+	"securepoll-full-openssl-error": "Parameters:\n* $1 - error message",
+	"securepoll-openssl-invalid-key": "Used as error message. RSA refers to the [[w:RSA_(cryptosystem)|Rivest–Shamir–Adleman cryptosystem]].",
 	"securepoll-no-decryption-key": "Used as error message.",
-	"securepoll-invalid-record": "Used as errror message.",
+	"securepoll-wrong-decryption-key": "Used as error message.",
+	"securepoll-no-verification-key": "Used as error message.",
+	"securepoll-invalid-record": "Used as error message.",
 	"securepoll-jump": "Label of the button than sends the user to the voting wiki.",
 	"securepoll-ballot-type-archived": "Used as error message.",
 	"securepoll-bad-ballot-submission": "Unused at this time. Parameters:\n* $1 - ...",
@@ -162,6 +167,8 @@
 	"securepoll-tally-form-file-label": "Label for a field in Special:SecurePoll/tally",
 	"securepoll-tally-upload-submit": "Label for the tally button. {{Identical|Create tally}}",
 	"securepoll-tally-gpg-decrypt-key": "Label for the GPG decryption key input.",
+	"securepoll-tally-openssl-decrypt-key": "Label for the decryption key input.",
+	"securepoll-tally-openssl-verify-key": "Label for the verification key input.",
 	"securepoll-tally-error": "Used as error message.",
 	"securepoll-tally-job-enqueued": "Used on successful submission of the tally form for a large election that needs to be tallied via a job.",
 	"securepoll-no-upload": "Used as error message.",
@@ -207,6 +214,8 @@
 	"securepoll-create-label-comment-prompt": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-gpg_encrypt_key": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-gpg_sign_key": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-openssl_encrypt_key": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-openssl_sign_key": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-questions": "Label for \"Questions\" section on Special:SecurePoll/create.\n{{Identical|Question}}",
 	"securepoll-create-questions-row-legend": "Label for form field on Special:SecurePoll/create.\n{{Identical|Question}}",
 	"securepoll-create-label-questions-question": "Label for form field on Special:SecurePoll/create.",
@@ -236,6 +245,7 @@
 	"securepoll-create-option-election_type-stv+droop-quota": "Label for form option on Special:SecurePoll/create.",
 	"securepoll-create-option-election_crypt-none": "Label for form option on Special:SecurePoll/create.",
 	"securepoll-create-option-election_crypt-gpg": "{{optional}}\nLabel for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_crypt-openssl": "{{optional}}\nLabel for form option on Special:SecurePoll/create.",
 	"securepoll-create-label-comment": "Label for the \"edit summary\" field on Special:SecurePoll/create.\n{{Identical|Reason}}",
 	"securepoll-create-user-not-in-electionadmin-group": "Used as an error message when trying to add an admin who is not a member of the electionadmin group. Parameters:\n* $1 - username of the admin",
 	"securepoll-create-fail-bad-id": "Used as error message in Special:SecurePoll/create.",
