--- a/i18n/en.json
+++ b/i18n/en.json
@@ -356,5 +356,7 @@
 	"securepoll-vote-result-checked-option-label": "$1: checked",
 	"securepoll-vote-result-comment": "Comment: $1",
 	"securepoll-vote-result-error-label": "Your votes could not be unpacked correctly. Please contact an election administrator",
-	"securepoll-vote-stv-clear-btn-label": "Clear all candidates"
+	"securepoll-vote-stv-clear-btn-label": "Clear all candidates",
+	"securepoll-vote-most-active-wiki-dropdown-label": "Choose your most active wiki",
+	"securepoll-vote-most-active-wiki-dropdown-option-text": "$1 ($2, $3 {{PLURAL:$3|edit|edits}})"
 }
