--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -381,5 +381,7 @@
 	"securepoll-vote-result-checked-option-label": "Label to show option which has been checked\n\nParameters:\n* $1- option",
 	"securepoll-vote-result-comment": "Label to show comment on vote\n\nParameters:\n* $1 - comment",
 	"securepoll-vote-result-error-label": "Label with error information during unpacking record",
-	"securepoll-vote-stv-clear-btn-label": "Label for button to clear all selected candidates"
+	"securepoll-vote-stv-clear-btn-label": "Label for button to clear all selected candidates",
+	"securepoll-vote-most-active-wiki-dropdown-label": "Label for most active wiki dropdown",
+	"securepoll-vote-most-active-wiki-dropdown-option-text": "Text for option in most active wiki dropdown"
 }
