Remove an unnecessary line break from a message
This line break is after a space. Either the space
or the line break is unnecessary, and their presence
is slightly confusing to translators.

Change-Id: I5e73d7af463f2686096f093169163d52026eb7ca

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -98,7 +98,7 @@
 	"securepoll-cookie-dup-list": "Cookie duplicate users",
 	"securepoll-dump-title": "Dump: $1",
 	"securepoll-dump-not-finished": "Election records are only available after the finish date on $1 at $2",
-	"securepoll-dump-no-urandom": "Cannot open /dev/urandom. \nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
+	"securepoll-dump-no-urandom": "Cannot open /dev/urandom. To maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
 	"securepoll-dump-private": "Sorry, viewing the encrypted record dump for this election is restricted to election administrators.",
 	"securepoll-urandom-not-supported": "This server does not support cryptographic random number generation.\nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
 	"securepoll-translate-title": "Translate: $1",
