Add dump option for .blt format
T344018

Change-Id: I07e7dd2c36dfe279b354aebd231980eb6ba13550

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -125,6 +125,9 @@
 	"securepoll-dump-not-finished": "Used if the election is not finished. Parameters:\n* $1 - the date\n* $2 - the time",
 	"securepoll-dump-no-urandom": "Do not translate \"/dev/urandom\".\n\nServers running Microsoft Windows will present [[MediaWiki:Securepoll-urandom-not-supported/en|Securepoll-urandom-not-supported]] instead.",
 	"securepoll-dump-private": "Used as an error message.",
+	"securepoll-dump-blt-error-not-stv": "Used as an error message when dump as blt and election is not a STV ballot type",
+	"securepoll-dump-blt-error-multiple-questions": "Used as an error message when dump as blt and election has more than one question",
+	"securepoll-dump-blt-error-no-votes": "Used as an error message when dump as blt and election has no votes",
 	"securepoll-urandom-not-supported": "As to the meaning of ''cryptographic random number'', see [[:wikipedia:Cryptographically secure pseudorandom number generator]] for reference.\n\nThe /dev/urandom cryptographic random number generation device is not supported on servers running Microsoft Windows. On other platforms the [[MediaWiki:Securepoll-dump-no-urandom/en|Securepoll-dump-no-urandom]] message is generated if opening of the /dev/urandom device fails.",
 	"securepoll-translate-title": "Used as page title. Parameters:\n* $1 - title of election\n{{Identical|Translate}}",
 	"securepoll-translate-redirect": "Text displayed when trying to edit messages for a multi-wiki poll on the wrong wiki.\n\nParameters:\n* $1 - HTML of a link to the correct wiki. Displayed text is either the wiki name or {{msg-mw|securepoll-translate-redirect-otherwiki}}",
