Remove extra ending periods in checkbox strings
Change-Id: Ifa4f1601057ff48c20c4c82feb60ba5911f4ad67

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -183,10 +183,10 @@
 	"securepoll-create-label-election_type": "Poll type:",
 	"securepoll-create-label-election_crypt": "Encryption:",
 	"securepoll-create-label-property_admins": "Admins:",
-	"securepoll-create-label-shuffle_questions": "Shuffle questions on the voting page.",
-	"securepoll-create-label-shuffle_options": "Shuffle options on the voting page.",
-	"securepoll-create-label-must_rank_all": "Require that all options be ranked.",
-	"securepoll-create-label-must_answer_all": "Require that all options be answered.",
+	"securepoll-create-label-shuffle_questions": "Shuffle questions on the voting page",
+	"securepoll-create-label-shuffle_options": "Shuffle options on the voting page",
+	"securepoll-create-label-must_rank_all": "Require that all options be ranked",
+	"securepoll-create-label-must_answer_all": "Require that all options be answered",
 	"securepoll-create-label-voter_privacy": "Disable transparency features (e.g. voter list) to protect voter privacy",
 	"securepoll-create-label-request-comment": "Request free text comments at the end of the ballot",
 	"securepoll-create-label-comment-prompt": "Prompt text for comments:",
