Add names for electionadmin group
Change-Id: I580a54cd596452ce09c3ff70321a641cc9670332

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -361,5 +361,8 @@
 	"securepoll-vote-result-error-label": "Your votes could not be unpacked correctly. Please contact an election administrator",
 	"securepoll-vote-stv-clear-btn-label": "Clear all candidates",
 	"securepoll-vote-most-active-wiki-dropdown-label": "Choose your most active wiki",
-	"securepoll-vote-most-active-wiki-dropdown-option-text": "$1 ($2, $3 {{PLURAL:$3|edit|edits}})"
+	"securepoll-vote-most-active-wiki-dropdown-option-text": "$1 ($2, $3 {{PLURAL:$3|edit|edits}})",
+	"group-electionadmin": "Election administrators",
+	"group-electionadmin-member": "{{GENDER:$1|election administrator}}",
+	"grouppage-electionadmin": "{{ns:project}}:Election administrators"
 }
