Use user rights in checks instead of user group
Avoid checking if the user has the electionadmin group. Instead, check
for the newly created securepoll-edit-poll right.

Bug: T377531
Bug: T293015
Change-Id: Ibdb052c742d18e7422ee5c2f755fbc617d7d9ea0

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -227,7 +227,7 @@
 	"securepoll-create-option-election_crypt-gpg": "GPG",
 	"securepoll-create-option-election_crypt-openssl": "OpenSSL",
 	"securepoll-create-label-comment": "Reason",
-	"securepoll-create-user-not-in-electionadmin-group": "\"$1\" is not a {{GENDER:$1|member}} of the electionadmin group.",
+	"securepoll-create-user-missing-edit-right": "\"$1\" does not have the permission to {{int:action-securepoll-edit-poll}}.",
 	"securepoll-create-fail-bad-id": "The submitted election ID does not match the election being edited",
 	"securepoll-create-fail-id-missing": "The election being edited no longer exists",
 	"securepoll-create-fail-bad-dblist": "The specified wiki or wiki list is not valid",
@@ -289,6 +289,8 @@
 	"action-securepoll-create-poll": "create polls and view logs",
 	"right-securepoll-view-voter-pii": "Access personally-identifying information about voters",
 	"action-securepoll-view-voter-pii": "access personally-identifying information about voters",
+	"right-securepoll-edit-poll": "Edit polls",
+	"action-securepoll-edit-poll": "edit polls",
 	"securepoll-ns-readonly": "The {{ns:SecurePoll}} namespace is read-only",
 	"securepoll-voter-stats": "Out of all eligible voters, $1 {{PLURAL:$1|voter has|voters have}} voted.",
 	"securepoll-vote-stats": "A total of $1 {{PLURAL:$1|vote has|votes have}} been cast. Of these, $2 {{PLURAL:$2|is|are}} thrown away because the voter has voted again, and $3 {{PLURAL:$3|is|are}} struck.",
