--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -252,7 +252,7 @@
 	"securepoll-create-option-election_crypt-gpg": "{{optional}}\nLabel for form option on Special:SecurePoll/create.",
 	"securepoll-create-option-election_crypt-openssl": "{{optional}}\nLabel for form option on Special:SecurePoll/create.",
 	"securepoll-create-label-comment": "Label for the \"edit summary\" field on Special:SecurePoll/create.\n{{Identical|Reason}}",
-	"securepoll-create-user-not-in-electionadmin-group": "Used as an error message when trying to add an admin who is not a member of the electionadmin group. Parameters:\n* $1 - username of the admin",
+	"securepoll-create-user-missing-edit-right": "Used as an error message when trying to add an admin who does not have the required user right. Parameters:\\n* $1 - username of the admin.",
 	"securepoll-create-fail-bad-id": "Used as error message in Special:SecurePoll/create.",
 	"securepoll-create-fail-id-missing": "Used as error message in Special:SecurePoll/create.",
 	"securepoll-create-fail-bad-dblist": "Used as error message in Special:SecurePoll/create.",
@@ -314,6 +314,8 @@
 	"action-securepoll-create-poll": "{{Doc-action|securepoll-create-poll}}",
 	"right-securepoll-view-voter-pii": "{{doc-right|securepoll-view-voter-pii}}",
 	"action-securepoll-view-voter-pii": "{{Doc-action|securepoll-view-voter-pii}}",
+	"right-securepoll-edit-poll": "{{Doc-right|securepoll-edit-poll}}",
+	"action-securepoll-edit-poll": "{{Doc-action|securepoll-edit-poll}}",
 	"securepoll-ns-readonly": "Error message to inform the user that the SecurePoll namespace cannot be edited.",
 	"securepoll-voter-stats": "Explanation of the unique number of voters who participated in the election; shown above the vote list.",
 	"securepoll-vote-stats": "Explanation of the total number of votes cast, as well as the number that were excluded because the voter had voted again, and the number that have been struck by an election admin; shown above the vote list.",
