ElectionPager: add label to 4th column in table
Special:SecurePoll displays a 4 column table. Before this patch,
the 4th column's header was blank. After this patch, the 4th
column's header says "Links". It is not a hyperlink and not
sortable, which is intentional, since you shouldn't need to
sort this column.

Bug: T378321
Change-Id: Ic55f722ee3e6574fb4374a23b287574c585f72a9

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -118,6 +118,7 @@
 	"securepoll-header-title": "Name",
 	"securepoll-header-start-date": "Start date",
 	"securepoll-header-end-date": "End date",
+	"securepoll-header-links": "Links",
 	"securepoll-subpage-vote": "Vote",
 	"securepoll-subpage-translate": "Translate",
 	"securepoll-subpage-list": "List",
