--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -322,7 +322,7 @@
 	"action-securepoll-view-voter-pii": "{{Doc-action|securepoll-view-voter-pii}}",
 	"right-securepoll-edit-poll": "{{Doc-right|securepoll-edit-poll}}",
 	"action-securepoll-edit-poll": "{{Doc-action|securepoll-edit-poll}}",
-	"securepoll-ns-readonly": "Error message to inform the user that the SecurePoll namespace cannot be edited.",
+	"securepoll-page-readonly": "Error message to inform the user that the SecurePoll configuration pages cannot be edited.",
 	"securepoll-voter-stats": "Explanation of the unique number of voters who participated in the election; shown above the vote list.",
 	"securepoll-vote-stats": "Explanation of the total number of votes cast, as well as the number that were excluded because the voter had voted again, and the number that have been struck by an election admin; shown above the vote list.",
 	"securepolllog": "{{doc-special|SecurePollLog}}",
