--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -121,6 +121,7 @@
 	"securepoll-dump-not-finished": "Used if the election is not finished. Parameters:\n* $1 - the date\n* $2 - the time",
 	"securepoll-dump-no-urandom": "Do not translate \"/dev/urandom\".\n\nServers running Microsoft Windows will present [[MediaWiki:Securepoll-urandom-not-supported/en|Securepoll-urandom-not-supported]] instead.",
 	"securepoll-dump-private": "Used as an error message.",
+	"securepoll-dump-not-tallied": "Used if the election is finished but has not been tallied yet.",
 	"securepoll-dump-blt-error-not-stv": "Used as an error message when dump as blt and election is not a STV ballot type\n\n'''STV = [[:w:Single transferable vote|Single Transferable Vote]]. For translations, see [[:wikidata:Q115807#sitelinks-wikipedia|Q115807 on Wikidata]].'''",
 	"securepoll-dump-blt-error-multiple-questions": "Used as an error message when dump as blt and election has more than one question",
 	"securepoll-dump-blt-error-no-votes": "Used as an error message when dump as blt and election has no votes",
