Allow multiple tallies to be associated with a poll
Why:

* We need to keep a record of previous tallies as following this patch
  we'll allow for re-tallying elections with pre-eliminated candidates
  with the STV tallier.

* Since different tallies may have different results, keeping a record
  is important for maintaining transparency to voters.

What:

* Created a new '/tallies/<electionId>' page with a pager of all tallies
  created for a specific election.

* Moved the tally results page to '/tallies/<electionId>/result/<tallyId>'.

* Tallies can be deleted using at '/tallies/<electionId>/delete/<tallyId>'.

* Updated the existing test mocks to work with changes to tallying.

Bug: T387701
Change-Id: I52aa2489b2a3bc458c468347ce0ba02d64b56c18

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,6 +10,7 @@
 	"securepoll-need-admin": "You need to be an election administrator to perform this action.",
 	"securepoll-too-few-params": "Not enough subpage parameters (invalid link).",
 	"securepoll-invalid-election": "\"$1\" is not a valid election ID.",
+	"securepoll-invalid-tally": "\"$1\" is not a valid tally ID.",
 	"securepoll-finished-no-edit": "This election has finished and you can no longer edit it.",
 	"securepoll-welcome": "<strong>{{GENDER:$1|Welcome}} $1!</strong>",
 	"securepoll-not-started": "This election has not yet started.\nIt is scheduled to start on $2 at $3.",
@@ -126,9 +127,11 @@
 	"securepoll-subpage-edit": "Edit",
 	"securepoll-subpage-votereligibility": "Voter Eligibility",
 	"securepoll-subpage-dump": "Dump",
-	"securepoll-subpage-tally": "Tally",
+	"securepoll-subpage-tallies": "Tallies",
 	"securepoll-subpage-log": "Logs",
 	"securepoll-subpage-archive": "Archive",
+	"securepoll-subpage-view": "View",
+	"securepoll-subpage-delete": "Delete",
 	"securepoll-archive-title": "Archive $1",
 	"securepoll-archive-private": "Sorry, only election administrators can archive/unarchive elections.",
 	"securepoll-archive-not-finished": "Sorry, you can only archive finished elections.",
@@ -143,6 +146,8 @@
 	"securepoll-unarchive-in-progress": "Election is currently being unarchived.",
 	"securepoll-unarchive-token-error": "There was a problem with your session and the election was not unarchived. Please try again.",
 	"securepoll-already-unarchived-error": "This election is not archived.",
+	"securepoll-delete-in-progress": "Tally is currently being deleted.",
+	"securepoll-deletetally-token-error": "There was a problem with your session and the tally was not deleted. Please try again.",
 	"securepoll-tally-title": "Tally: $1",
 	"securepoll-tally-not-finished": "Sorry, you cannot tally the election until after voting is complete.",
 	"securepoll-tally-form-file-help": "If you uploaded an encrypted dump, its contents will be tallied. Otherwise the results in the database will be tallied. NOTE: Uploading an election with more than 100 votes might not give any results and lead to a timeout.",
@@ -152,11 +157,13 @@
 	"securepoll-tally-openssl-verify-key": "Verification key",
 	"securepoll-tally-error": "Error interpreting vote record, cannot produce a tally.",
 	"securepoll-tally-job-enqueued": "This election is being (re-)tallied. Please check back later for the results.",
+	"securepoll-tally-list-title": "Tallies: $1",
+	"securepoll-delete-tally-title": "Delete Tally",
 	"securepoll-no-upload": "No file was uploaded, cannot tally results.",
 	"securepoll-dump-corrupt": "The dump file is corrupt and cannot be processed.",
 	"securepoll-tally-upload-error": "Error tallying dump file: $1",
 	"securepoll-tally-result-error": "Tally failed with error: $1",
-	"securepoll-tally-result": "<h2>Previous results</h2><p>$1</p><p>(Results from $2)</p>",
+	"securepoll-tally-result": "<h2>Results</h2><p>$1</p><p>(Results from $2)</p>",
 	"securepoll-tally-comments": "Voter comments",
 	"securepoll-pairwise-victories": "Pairwise victory matrix",
 	"securepoll-strength-matrix": "Path strength matrix",
