--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -36,6 +36,7 @@
 	"securepoll-need-admin": "Used as error message.",
 	"securepoll-too-few-params": "Used as error message.",
 	"securepoll-invalid-election": "Used as error message. Parameters:\n* $1 - invalid election ID",
+	"securepoll-invalid-tally": "Used as error message. Parameters:\n* $1 - invalid tally ID",
 	"securepoll-finished-no-edit": "Used as an error message.",
 	"securepoll-welcome": "Used as welcome message for remote voters. Parameters:\n* $1 - username of remote voter\n{{Identical|Welcome}}",
 	"securepoll-not-started": "Parameters:\n* $1 - (Unused)\n* $2 - the date of it\n* $3 - its time",
@@ -152,9 +153,11 @@
 	"securepoll-subpage-edit": "Link text to a sub page in the SecurePoll extension where users can edit a poll configuration.\n{{Identical|Edit}}",
 	"securepoll-subpage-votereligibility": "Link text to a sub page in the SecurePoll extension where users can configure voter eligibility.",
 	"securepoll-subpage-dump": "Link text to a sub page in the SecurePoll extension where users can dump results.\n{{Identical|Dump}}",
-	"securepoll-subpage-tally": "Link text to a sub page in the SecurePoll extension where users can tally.\n{{Identical|Tally}}",
+	"securepoll-subpage-tallies": "Link text to a sub page in the SecurePoll extension where users can vew tallies.\n{{Identical|Tallies}}",
 	"securepoll-subpage-log": "Link text to the logs for a specific election in SecurePoll",
 	"securepoll-subpage-archive": "This is a verb. Link text to archive a finished election in SecurePoll\n\n{{Identical|Archive}}",
+	"securepoll-subpage-view": "Link text to a sub page in the SecurePoll extension where users can view tallies for an election.\n\n{{Identical|View}}",
+	"securepoll-subpage-delete": "Link text to a sub page in the SecurePoll extension where users can delete tallies for an election.\n\n{{Identical|Delete}}",
 	"securepoll-archive-title": "Title of the archive page for an election\n\n{{Identical|Archive}}",
 	"securepoll-archive-private": "Used as an error message",
 	"securepoll-archive-not-finished": "Used as an error message",
@@ -169,6 +172,8 @@
 	"securepoll-unarchive-in-progress": "Confirmation that an election is being unarchived",
 	"securepoll-unarchive-token-error": "Used as an error message",
 	"securepoll-already-unarchived-error": "Used as an error message",
+	"securepoll-delete-in-progress": "Confirmation that a tally is scheduled to be deleted",
+	"securepoll-deletetally-token-error": "Used as an error message",
 	"securepoll-tally-title": "Used as page title. Parameters:\n* $1 - title of the election, or the string \"[title]\"\n{{Identical|Tally}}",
 	"securepoll-tally-not-finished": "Used as error message.",
 	"securepoll-tally-form-file-help": "Used as help text for a form field.",
@@ -178,6 +183,8 @@
 	"securepoll-tally-openssl-verify-key": "Label for the verification key input.",
 	"securepoll-tally-error": "Used as error message.",
 	"securepoll-tally-job-enqueued": "Used on successful submission of the tally form for a large election that needs to be tallied via a job.",
+	"securepoll-tally-list-title": "Used as page title. Parameters:\n* $1 - title of the election, or the string \"[title]\"\n{{Identical|Tally}}",
+	"securepoll-delete-tally-title": "Used as page title.",
 	"securepoll-no-upload": "Used as error message.",
 	"securepoll-dump-corrupt": "Used as error message.",
 	"securepoll-tally-upload-error": "Used as error message. Parameters:\n* $1 - error message",
