Prefer a parameter for importing translations in SecurePoll
Change the work done in T310909 to use a user-serviceable parameter
instead of a configuration. This has the bonus of making it easier to
test on different environments without needing to deploy configuration
changes.

- Remove the config SecurePollTranslationImportSourceUrl
- Add new input field for the source API URL
- Validate input before triggering translation import
- Add unit tests

Bug: T387720
Change-Id: Ibdbe436331dbac847cf5a224baee8eb3bc6e9bb4

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -334,7 +334,7 @@
 	"securepoll-stv-result-round-elected": "Elected: $1",
 	"securepoll-stv-result-round-eliminated": "Eliminated: $1",
 	"securepoll-stv-result-round-keep-factor": "(keep factor: $1)",
-	"securepoll-subpage-translate-info": "You can import translations from $1, translate manually or edit existing translations.",
+	"securepoll-subpage-translate-info": "You can import translations, translate manually or edit existing translations.",
 	"securepoll-translate-import-button-label": "Import translations",
 	"securepoll-translation-importer-no-content": "Page content is empty",
 	"securepoll-translation-importer-update-start": "Importing page $1",
@@ -347,10 +347,13 @@
 	"securepoll-translation-result-description": "Imported translations from",
 	"securepoll-translation-import-start": "Start importing",
 	"securepoll-translation-select-import-source": "Select page from $1",
+	"securepoll-translation-select-import-source-api": "Provide the <a href=\"https://www.mediawiki.org/wiki/API:Main_page\" target=\"_blank\" rel=\"noopener noreferrer\">MediaWiki Action API</a> source:",
+	"securepoll-translation-select-import-source-page": "Provide the page title from the source above:",
 	"securepoll-translation-import-dialog-title": "Import translations",
 	"securepoll-translation-import-action-import": "Import",
 	"securepoll-translation-import-action-done": "Done",
 	"securepoll-translation-error-no-page-title": "No page title found",
+	"securepoll-translation-error-invalid-source-api": "Invalid API source",
 	"securepoll-vote-result-intro-label": "Summary of your vote",
 	"securepoll-vote-result-question-label": "Question: $1",
 	"securepoll-vote-result-rated-option-label": "$1: rated $2",
