--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -373,10 +373,13 @@
 	"securepoll-translation-result-description": "Imported translations from",
 	"securepoll-translation-import-start": "Used as an update message during import process",
 	"securepoll-translation-select-import-source": "Label for input field in import dialog\nParameters:\n* $1 - page title",
+	"securepoll-translation-select-import-source-api": "Label for the input field for the source API URL",
+	"securepoll-translation-select-import-source-page": "Label for the input field for the page title",
 	"securepoll-translation-import-dialog-title": "Title for translations dialog",
 	"securepoll-translation-import-action-import": "Label for action import in translation dialog",
 	"securepoll-translation-import-action-done": "Label for action done in translation dialog",
 	"securepoll-translation-error-no-page-title": "Used as an error message",
+	"securepoll-translation-error-invalid-source-api": "Error message when the source API URL is invalid",
 	"securepoll-vote-result-intro-label": "Header for vote summary after action vote",
 	"securepoll-vote-result-question-label": "Label for showing question text\n\nParameters:\n* $1 - question text",
 	"securepoll-vote-result-rated-option-label": "Label to show voting result for one option.\n\nParameters:\n* $1 - option\n* $2 - rating result",
