Special:SecurePoll: add status field to pager
This will make it easier to tell if an election is not started,
in progress, or completed, without having to pay
attention to the start date and without having to do
calculations in your head.

This will also make things make more sense when we start
disabling certain links depending on status.

Bug: T392446
Change-Id: I480dc6c5776f2d4081d512ab7a02326f22380ec2

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -114,7 +114,12 @@
 	"securepoll-header-title": "Name",
 	"securepoll-header-start-date": "Start date",
 	"securepoll-header-end-date": "End date",
+	"securepoll-header-status": "Status",
 	"securepoll-header-links": "Links",
+	"securepoll-status-not-started": "Not started",
+	"securepoll-status-in-progress": "In progress",
+	"securepoll-status-completed": "Completed",
+	"securepoll-status-archived": "Archived",
 	"securepoll-subpage-vote": "Vote",
 	"securepoll-subpage-translate": "Translate",
 	"securepoll-subpage-list": "List",
