--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -142,10 +142,10 @@
 	"securepoll-header-end-date": "{{Identical|End date}}",
 	"securepoll-header-status": "{{Identical|Status}}",
 	"securepoll-header-links": "Label for the \"Links\" column in Special:SecurePoll",
-	"securepoll-status-not-started": "One of the three states a poll/election can be in. The four states are not started, in progress, completed, and archived.",
-	"securepoll-status-in-progress": "One of the three states a poll/election can be in. The four states are not started, in progress, completed, and archived.",
-	"securepoll-status-completed": "One of the three states a poll/election can be in. The four states are not started, in progress, completed, and archived.",
-	"securepoll-status-archived": "One of the three states a poll/election can be in. The four states are not started, in progress, completed, and archived.",
+	"securepoll-status-not-started": "One of the statuses a poll/election can be in. The statuses are not started, in progress, completed, and archived.",
+	"securepoll-status-in-progress": "One of the statuses a poll/election can be in. The statuses are not started, in progress, completed, and archived.",
+	"securepoll-status-completed": "One of the statuses a poll/election can be in. The statuses are not started, in progress, completed, and archived.",
+	"securepoll-status-archived": "One of the statuses a poll/election can be in. The statuses are not started, in progress, completed, and archived.",
 	"securepoll-subpage-vote": "Link text to a sub page in the SecurePoll extension where users can vote.\n{{Identical|Vote}}",
 	"securepoll-subpage-translate": "Link text to a sub page in the SecurePoll extension where users can translate poll related texts.\n{{Identical|Translate}}",
 	"securepoll-subpage-list": "Link text to a sub page in the SecurePoll extension where users can list poll information.\n{{Identical|List}}",
