Replaced the STV vote form's combobox with a drag-and-drop widget
Why:

* It's not intuitive to use a combobox to select ranked candidates as
  it's not clear that multiple candidates can be selected.

* The combobox also didn't clear its value after making a selection
  which may confuse users into thinking the contents of the combobox is
  the final vote.

What:

* The combobox has been replaced with a dual-panel layout where
  candidates can be dragged and dropped between the two panels.

* Existing tests have been updated to reflect the new layout.

Bug: T394536
Change-Id: I3b371b5b868cec47e0cd3f8db4a4a4626dcc7863

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -19,6 +19,8 @@
 	"securepoll-not-qualified": "You are not qualified to vote in this election: $1",
 	"securepoll-change-disallowed": "You have voted in this election before.\nSorry, you may not vote again.",
 	"securepoll-change-allowed": "<strong>Note: You have voted in this election before.</strong>\nYou may change your vote by submitting the form below.\nNote that if you do this, your original vote will be discarded.",
+	"securepoll-stv-unranked-candidates": "Not ranked",
+	"securepoll-stv-ranked-candidates": "Ranked",
 	"securepoll-header-comments": "Comments",
 	"securepoll-submit": "Submit vote",
 	"securepoll-gpg-receipt": "If you wish, you may retain the following receipt as evidence of your vote:\n\n<pre>$1</pre>",
