--- a/i18n/en.json
+++ b/i18n/en.json
@@ -54,7 +54,7 @@
 	"securepoll-blocked-partial": "Sorry, you cannot vote in this election if you are currently partially blocked from editing.",
 	"securepoll-blocked-centrally": "Sorry, you cannot vote in this election as you are blocked on at least $1 {{PLURAL:$1|wiki|wikis}}.",
 	"securepoll-bot": "Sorry, accounts with the bot flag are not allowed to vote in this election.",
-	"securepoll-not-in-group": "Only members of the \"$1\" group can vote in this election.",
+	"securepoll-not-in-group": "Sorry, only users in the following groups can vote in this election: $1",
 	"securepoll-not-in-list": "Sorry, you are not in the predetermined list of users authorized to vote in this election.",
 	"securepoll-in-exclude-list": "Sorry, you are not authorized to vote in this election.",
 	"securepoll-custom-unqualified": "$1",
@@ -256,6 +256,7 @@
 	"securepoll-votereligibility-label-not_centrally_blocked": "Must not be blocked on too many attached wikis",
 	"securepoll-votereligibility-label-central_block_threshold": "Central block threshold",
 	"securepoll-votereligibility-label-not_bot": "Must not be flagged as a bot",
+	"securepoll-votereligibility-label-need_group": "Must be in any one of these groups:",
 	"securepoll-votereligibility-lists": "Voter lists",
 	"securepoll-votereligibility-lists-info": "Eligible voters may also be listed explicitly. There are three lists:\n* The ''{{int:securepoll-votereligibility-voter}}'' is a list of voters who are allowed to vote, if they also meet the basic requirements defined above. This list is often populated automatically.\n* The ''{{int:securepoll-votereligibility-include}}'' is a list of voters who are allowed to vote regardless of the basic requirements or the eligibility list.\n* The ''{{int:securepoll-votereligibility-exclude}}'' is a list of voters who are not allowed to vote, regardless of any other lists.",
 	"securepoll-votereligibility-voter": "Eligibility list",
@@ -275,7 +276,7 @@
 	"securepoll-votereligibility-label-edits_startdate": "Edits on or after:",
 	"securepoll-votereligibility-label-edits_enddate": "And before:",
 	"securepoll-votereligibility-label-exclude_groups": "Exclude users in these groups",
-	"securepoll-votereligibility-label-include_groups": "Include users in these groups, regardless of edits or other groups",
+	"securepoll-votereligibility-label-include_groups": "Always include users in these groups, regardless of the eligibility list or basic options:",
 	"securepoll-votereligibility-label-names": "Usernames",
 	"securepoll-votereligibility-label-comment": "Reason",
 	"securepoll-votereligibility-action": "Save configuration",
