VoterEligibilityPage: make form labels consistent across basic options
All of them now being with "Must".

Change-Id: Id7116dbf43eb510bd758e641127107617e30c562

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -249,8 +249,8 @@
 	"securepoll-votereligibility-basic-info": "Basic options are checked when the user attempts to vote.",
 	"securepoll-votereligibility-invalid-list": "The given voter eligibility list is not known.",
 	"securepoll-votereligibility-list-is-processing": "The given voter eligibility list is being automatically populated, and cannot be edited now.",
-	"securepoll-votereligibility-label-min_edits": "Minimum edits:",
-	"securepoll-votereligibility-label-max_registration": "Registered before:",
+	"securepoll-votereligibility-label-min_edits": "Must have minimum edit count:",
+	"securepoll-votereligibility-label-max_registration": "Must be registered before:",
 	"securepoll-votereligibility-label-not_blocked_sitewide": "Must not be sitewide blocked",
 	"securepoll-votereligibility-label-not_blocked_partial": "Must not be partial blocked",
 	"securepoll-votereligibility-label-not_centrally_blocked": "Must not be blocked on too many attached wikis",
