--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -391,6 +391,7 @@
 	"securepoll-translation-import-action-done": "Label for action done in translation dialog",
 	"securepoll-translation-error-no-page-title": "Used as an error message",
 	"securepoll-translation-error-invalid-source-api": "Error message when the source API URL is invalid",
+	"securepoll-list-redirect": "Text displayed when trying to list votes for a multi-wiki poll on the wrong wiki.\n\nParameters:\n* $1 - HTML of a link to the correct wiki. Displayed text is either the wiki name or {{msg-mw|securepoll-edit-redirect-otherwiki}}",
 	"securepoll-vote-result-intro-label": "Header for vote summary after action vote",
 	"securepoll-vote-result-question-label": "Label for showing question text\n\nParameters:\n* $1 - question text",
 	"securepoll-vote-result-rated-option-label": "Label to show voting result for one option.\n\nParameters:\n* $1 - option\n* $2 - rating result",
