ListPage: don't try to list votes for jump polls
Why:
- For multi-wiki elections, Special:SecurePoll/list is able to list the
  votes only when viewed from the central wiki. On other wikis, it
  currently shows a list of 0 votes (or errors out if the
  securepoll_votes table was deleted per T395928).

What:
- Show a message with a link to the list page on the central wiki.
- Abstract out the logic to ActionPage. It's shared across CreatePage,
  TranslatePage and now ListPage.

Bug: T400831
Bug: T75915
Bug: T398126
Change-Id: Ibc8d7b80c4f52b69d4e72ef1795324290199e8c3

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -369,6 +369,7 @@
 	"securepoll-translation-import-action-done": "Done",
 	"securepoll-translation-error-no-page-title": "No page title found",
 	"securepoll-translation-error-invalid-source-api": "Invalid API source",
+	"securepoll-list-redirect": "This list of votes must be viewed on $1",
 	"securepoll-vote-result-intro-label": "Summary of your vote",
 	"securepoll-vote-result-question-label": "Question: $1",
 	"securepoll-vote-result-rated-option-label": "$1: rated $2",
