Allow viewing of blt output from encrypted STV elections
Why:
BLT files cannot be generated for encrypted STV elections and
should be for election integrity purposes.

What:
- Support generating BLTs from manually generated votes alongside
  votes pulled from the database
- Output a BLT alongside the tally results for STV elections
- Support representing excluded candidates in BLT

Bug: T400666
Change-Id: I53cfa40ba65adf69cc9b1e4fb7591e55ea636263

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -335,6 +335,7 @@
 	"securepoll-stv-result-election-eliminated-header": "Eliminated/Not elected",
 	"securepoll-stv-result-election-rounds-header": "Rounds table",
 	"securepoll-stv-result-election-round-number-table-heading": "Round Number",
+	"securepoll-stv-result-election-blt-header": "BLT",
 	"securepoll-stv-result-election-tally-table-heading": "Tally",
 	"securepoll-stv-result-election-result-table-heading": "Result",
 	"securepoll-stv-result-candidate-elected": "<b>$1:</b>",
